fix grid alignment

--- a/faceted-search/webapp/styles/App.less
+++ b/faceted-search/webapp/styles/App.less
@@ -23,6 +23,7 @@ body {
       display: table-cell;
       width: 70%;
       padding: 10px;
+      vertical-align: top;
     }
   }
 
